# seq-actors

./: .gitignore  Cargo.toml
docs/: DESIGN.md
src/: actor.rs  builtins.rs  ffi.rs  journal.rs  lib.rs  runtime.rs  serialize.rs
