[package]
name = "seq-actors"
version = "0.1.0"
edition = "2021"
authors = ["Ed Sweeney <ed@onextent.com>"]
license = "MIT"
description = "Actor system for the Seq programming language"
repository = "https://github.com/navicore/seq-actors"
keywords = ["actors", "seq", "event-sourcing", "concurrency"]
categories = ["concurrency", "development-tools"]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
# Seq compiler (for extending with actor builtins)
seq-compiler = { path = "../patch-seq/compiler" }
seq-runtime = { path = "../patch-seq/runtime" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
# serde_json only for debugging/inspection utilities, not journal storage
serde_json = "1.0"

# Persistence (optional backends)
# rusqlite = { version = "0.31", optional = true }

# Async runtime (for actor scheduling)
# tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

# Unique IDs for actors
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
# sqlite = ["rusqlite"]
