[package]
name = "seq-actors"
version = "0.1.0"
edition = "2021"
authors = ["Ed Sweeney <ed@onextent.com>"]
license = "MIT"
description = "Actor system for the Seq programming language"
repository = "https://github.com/navicore/seq-actors"
keywords = ["actors", "seq", "event-sourcing", "concurrency"]
categories = ["concurrency", "development-tools"]

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
# Seq compiler (for extending with actor builtins)
seq-compiler = { path = "../patch-seq/compiler" }
seq-runtime = { path = "../patch-seq/runtime" }

# Serialization (TypedValue from seq-runtime, bincode for Event/Snapshot)
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Persistence (optional backends)
# rusqlite = { version = "0.31", optional = true }

# Async runtime (for actor scheduling)
# tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

# Unique IDs for actors
uuid = { version = "1.0", features = ["v4"] }

# Concurrency utilities
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3"

[features]
default = []
# sqlite = ["rusqlite"]
